--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/jquery.plugins.js"></script>
     <script src="js/jquery.rules.js"></script>
+</head>
 <body>
 
 <section id="wrapper">
